# rust_practice

./: .env  Cargo.toml
src/: database.rs  main.rs
src/database/: connection.rs
