[package]
name = "backend2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }
serde = {version = "1.0.162", features = ["derive"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "uuid" ] }
dotenv = "0.15.0"